--- a/public/index.ejs
+++ b/public/index.ejs
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="<%= bundle %>"></script>
+    <script src=".<%= bundle %>"></script>
   </body>
 </html>
